  parameter `--dot' prints the respective annotations in the dot output

* implemented parameter `--pnml' to read a PNML file format

* moved the utility to minimize operating guidelines to the `ogapi' trunk
  (see `http://svn.gna.org/viewcvs/service-tech/trunk/ogapi/')

* added a tool paper with a case study (see `doc/toolpaper.pdf')

Version 2.7 (17 December 2009)
==============================

* configure Wendy with `--enable-syslog' to additionally write verbose
  output to the syslog (e.g. `/var/log/system.log')

* `--reportFrequency' sets the number of edges to be reported (was: number
  of knowledges)

* fixed bug #14922 (see `https://gna.org/bugs/?14922'): Wendy could not
  process markings with Unicode place names which yielded a crash when
  using `--mi'

Version 2.6 (23 November 2009)
==============================

* implemented user-defined data structure for the queue used in the closure
  operation

* discontinued deprecated output of operating guidelines in Fiona's file
  format (parameter `--fionaFormat') - this can be done with the compiler
  `wendy2fiona'

* discontinued output of bit operating guidelines (parameter
  `--formula=bits') - this can be done with the compiler `wendyFormula2bits'

Version 2.5 (21 November 2009)
==============================

* Wendy expects LoLA to omit printing out statistical data; usage of LoLA
  1.14 is required

* fixed bug #14798 (see `https://gna.org/bugs/?14798'): smart sending is
  too strict (now fix of bug #14782 is obsolete and is handled with the new
  implementation)

* fixed bug #14782 (see `https://gna.org/bugs/?14782'): smart sending event
  does not handle self loops of inner markings correctly

* added an error message to avoid segmentation faults in case a marking has
  two outgoing transitions with the same synchronous label (see
  `https://gna.org/bugs/?14719')

Version 2.4 (9 November 2009)
=============================

* added target for benchmarks (execute `make bench -C tests')
