@@ -6,6 +6,8 @@
 @item moved the utility to minimize operating guidelines to the @samp{ogapi} trunk (see @url{http://svn.gna.org/viewcvs/service-tech/trunk/ogapi/})
 
 @item added a tool paper with a case study (see @file{doc/toolpaper.pdf})
+
+@item Wendy now checks whether it can use an installed version of the Petri Net API (@samp{libpnapi}) and only compiles its shipped version (see @file{libs/pnapi}) if the installed version is missing, the installed version cannot be linked (e.g., due to a wrong architecture), or the configure script option @option{--without-pnapi} is used.
 @end itemize
 
 
